 	- make ExecStopPost action part of ExecStart;
 	- remove systemd-ask-password-console path and service;
 	- remove systemd-ask-password-wall path and service;
 * systemctl:
 	- show StatusErrno value in "systemctl status";
 	- remove property argument option;
 	- don't open the password agent;
 	- remove no-ask-password argument option;
 * shared:
 	- consider 0x7F(DEL) a control chracter;
 	- don't consider tabs special in string_has_cc() anymore;
 	- add string table entries for mips-le archs which were missing;
 	- remove unused functions;
 	- use strjoin in execute_directory function;
 	- remove ring util;
 	- add function to open temp files in selinux mode;
 	- don't make ~/.local/share/systemd/user a symlink;
 	- quote more shell characters in envfiles;
 	- fix error message in socket label util;
 	- rename id _UNIT_FILE_PRESET_MODE_MAX to _UNIT_FILE_PRESET_MAX;
 	- remove eventfd util;
 	- remove ask-password-api util;
 	- add quotes to warning message in log module;
 	- make SYSTEMD_UNIT_PATH more flexible;
 * virt:
 	- rework container detection logic;
 	- detect s390 virtualization;
 * tmpfiles:
 	- remove unused /run/systemd/ask-password directory;
 * po:
 	- add Ukrainian translation;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 	- document yearly and annually in systemd.time(7);
 * tests:
 	- remove test-ring test;
 	- add tests to test-tables;
 	- fix access to unit load path;
 	- pass on kernels without memory controller;
 	- fix masks in test-cgroup-mask test;
 	- add test-cgroup-mask test;
 	- add test units;
 * rules:
 	- consistently use "?*" instead of "*?";
 	- uaccess - add ID_SOFTWARE_RADIO;
 * build:
 	- do not distribute generated emergency.service;
 	- add TEST_DIR path;
 * bugfix: